objects/Social_Engagement__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of staff member</description>
        <inlineHelpText>Name of staff member</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_Flag__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Social Engagements</relationshipLabel>
        <relationshipName>Social_Engagements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Hours_Invested__c</fullName>
        <description>Optional: Track the time donated by staff members.  Resource hours spent by the core Social Mission Team should be tracked in the "Project Hours" field on the main Social Action.</description>
        <inlineHelpText>Optional: Track the time donated by staff members.  Resource hours spent by the core Social Mission Team should be tracked in the "Project Hours" field on the main Social Action.</inlineHelpText>
        <label>Hours Invested</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Migration_ID__c</fullName>
        <description>Added by Marc for migration purposes.</description>
        <label>Migration ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <description>Optional: capture notes of the staff engagement</description>
        <inlineHelpText>Optional: capture notes of the staff engagement</inlineHelpText>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Role__c</fullName>
        <description>Role of staff member for this engagement. "Champion/Organizer" = main leader, EOY nominator, a-thon participant, STEM Ambassador, etc.</description>
        <inlineHelpText>Role of staff member for this engagement. "Champion/Organizer" = main leader, EOY nominator, a-thon participant, STEM Ambassador, etc.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion/Organizer</fullName>
                </value>
                <value>
                    <fullName>EOY Voter</fullName>
                </value>
                <value>
                    <fullName>STEM Ambassador</fullName>
                </value>
                <value>
                    <fullName>Volunteer - Participant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Social_Action__c</fullName>
        <description>track the Social Action that the Role is associated to</description>
        <label>Social Action</label>
        <referenceTo>Social_Action__c</referenceTo>
        <relationshipLabel>Social Engagements</relationshipLabel>
        <relationshipName>Social_Engagements1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Social Engagement</label><nameField>
        <displayFormat>SE-{0000}</displayFormat>
        <label>Social Engagement ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Social Engagements</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>Contact__c</columns>
        <columns>NAME</columns>
        <columns>Social_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>